# CloudyBack/Kjkardum.CloudyBack.Api/Controllers/Resources/BaseResourceController.cs
@@ -1,9 +1,11 @@
 using Kjkardum.CloudyBack.Application.Request;
 using Kjkardum.CloudyBack.Application.Response;
+using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Commands.ConfigureGrafana;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Dtos;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetAuditLog;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetContainer;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetDockerEnvironment;
+using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetGrafanaConfiguration;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.GetPaginated;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.QueryLoki;
 using Kjkardum.CloudyBack.Application.UseCases.BaseResource.Queries.QueryPrometheus;
@@ -32,6 +34,23 @@ public class BaseResourceController(IMediator mediator): ControllerBase
     {
         var result = await mediator.Send(new GetDockerEnvironmentQuery(), cancellationToken);
         return Ok(result);
+    }
+
+    [HttpGet("grafana")]
+    public async Task<ActionResult<GrafanaConfigurationDto>> GetGrafanaConfiguration(
+        CancellationToken cancellationToken = default)
+    {
+        var result = await mediator.Send(new GetGrafanaConfigurationQuery(), cancellationToken);
+        return Ok(result);
+    }
+
+    [HttpPost("grafana")]
+    public async Task<IActionResult> UpdateGrafanaConfiguration(
+        ConfigureGrafanaCommand command,
+        CancellationToken cancellationToken = default)
+    {
+        await mediator.Send(command, cancellationToken);
+        return NoContent();
     }
 
     [HttpGet("{resourceId:guid}/container")]
