# CloudyBack/Kjkardum.CloudyBack.Application/UseCases/BaseResource/Commands/ConfigureGrafana/ConfigureGrafanaCommand.cs
@@ -1,0 +1,9 @@
+using MediatR;
+
+namespace Kjkardum.CloudyBack.Application.UseCases.BaseResource.Commands.ConfigureGrafana;
+
+public class ConfigureGrafanaCommand: IRequest
+{
+    public string Host { get; set; }
+    public bool UseHttps { get; set; }
+}
