# CloudyFront/apispecs/swagger.yaml
@@ -84,6 +84,40 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/DockerEnvironment'
+  /api/resource/BaseResource/grafana:
+    get:
+      tags:
+        - BaseResource
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/GrafanaConfigurationDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GrafanaConfigurationDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/GrafanaConfigurationDto'
+    post:
+      tags:
+        - BaseResource
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ConfigureGrafanaCommand'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/ConfigureGrafanaCommand'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/ConfigureGrafanaCommand'
+      responses:
+        '200':
+          description: OK
   '/api/resource/BaseResource/{resourceId}/container':
     get:
       tags:
@@ -1283,6 +1317,14 @@ components:
           items:
             $ref: '#/components/schemas/BaseResourceDto'
       additionalProperties: false
+    ConfigureGrafanaCommand:
+      type: object
+      properties:
+        host:
+          type: string
+        useHttps:
+          type: boolean
+      additionalProperties: false
     ConnectReverseProxyCommand:
       type: object
       properties:
@@ -1507,15 +1549,20 @@ components:
     DockerVolume:
       type: object
       properties:
-        volumeId:
-          type: string
         name:
           type: string
-        size:
-          type: integer
-          format: int64
         createdAt:
           type: string
+      additionalProperties: false
+    GrafanaConfigurationDto:
+      type: object
+      properties:
+        created:
+          type: boolean
+        host:
+          type: string
+        useHttps:
+          type: boolean
       additionalProperties: false
     KafkaClusterResourceDto:
       required:
